# AE-NetScope

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PUBLIC_RELEASE_CHECKLIST.md  README.md  RELEASE_NOTES_v0.1.0-alpha.md  RELEASE_NOTES_v0.1.1-alpha.md  RELEASE_NOTES_v0.1.2-alpha.md  RELEASE_NOTES_v0.1.3-alpha.md  RELEASE_NOTES_v0.1.4-alpha.md  RELEASE_NOTES_v0.1.5-alpha.md  RELEASE_NOTES_v0.1.6-alpha.1.md  RELEASE_NOTES_v0.1.6-alpha.md  RELEASE_NOTES_v0.1.7-alpha.md  SECURITY.md  SUPPORT.md  TRUENAS_SUBMISSION_CHECKLIST.md  VERSION  compose.build.yaml  compose.yaml  package.json  start-api.cmd  start-dev.cmd  start-web.cmd  test.cmd
api/: pyproject.toml
api/app/: __init__.py  bootstrap.py  cli.py  main.py
api/app/api/: deps.py  router.py
api/app/core/: config.py  permissions.py  rate_limit.py  redis.py  security.py  version.py
api/app/db/: session.py
api/app/middleware/: request_limits.py  security_headers.py
api/app/models/: __init__.py  audit.py  inventory.py  session.py  state.py  user.py
api/app/schemas/: audit.py  auth.py  inventory.py  users.py  version.py
api/app/services/: audit.py  auth.py  inventory.py  maintenance.py  setup.py  users.py
api/migrations/: env.py
api/tests/: conftest.py  test_audit.py  test_auth.py  test_core.py  test_health.py  test_inventory.py  test_inventory_helpers.py  test_maintenance.py  test_migrations.py  test_rate_limit.py  test_request_limits.py  test_security.py  test_security_headers.py  test_static_web.py  test_users.py  test_versioning.py
(+83 files in other folders)
