[project]
name = "ae-netscope-api"
version = "0.1.0"
description = "API foundation for AE NetScope."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.0",
  "aiosqlite>=0.22.0",
  "asyncpg>=0.31.0",
  "fastapi>=0.124.0",
  "pwdlib[argon2]>=0.3.0",
  "pydantic-settings>=2.12.0",
  "email-validator>=2.3.0",
  "redis>=7.1.0",
  "sqlalchemy>=2.0.45",
  "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pip-audit>=2.9.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.0",
]
worker = [
  "dramatiq[redis]>=1.18.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
